Update payment system and user credit defaults: - Change Stripe checkout URL to new endpoint - Add Stripe buy button component - Set new user default credits to 0 instead of 1 - Update login screen messaging to promote free trial - Remove automatic free course generation for new signups

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     camera=(self)
   ">
   
+  <!-- Stripe Buy Button Script -->
+  <script async
+    src="https://js.stripe.com/v3/buy-button.js">
+  </script>
+  
   <!-- Removed problematic Stripe script that was causing CSP violations -->
   <script>
     // Prevent Cloudflare Insights errors and warnings
