Fix captcha and redirect issues: Remove PST-blocking headers, gate login captcha, fix password reset redirects, and improve registration flow after payment

--- a/index.html
+++ b/index.html
@@ -7,13 +7,8 @@
   <link rel="preconnect" href="http://localhost:4003" />
   <title>LMS Generator - Create Learning Modules</title>
   
-  <!-- Add Permissions Policy to allow payment -->
-  <meta http-equiv="Permissions-Policy" content="
-    payment=(self),
-    geolocation=(self),
-    microphone=(self),
-    camera=(self)
-  ">
+  <!-- Simplified Permissions Policy; omit PST directives to avoid console violations -->
+  <meta http-equiv="Permissions-Policy" content="payment=(self), geolocation=(self), microphone=(self), camera=(self)">
   
 
   
