Fix permissions policy violations: add comprehensive security headers to prevent private-state-token errors

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="preconnect" href="http://localhost:4003" />
   <title>LMS Generator - Create Learning Modules</title>
   
-  <!-- Simplified Permissions Policy; omit PST directives to avoid console violations -->
-  <meta http-equiv="Permissions-Policy" content="payment=(self), geolocation=(self), microphone=(self), camera=(self)">
+  <!-- Permissions Policy to prevent console violations -->
+  <meta http-equiv="Permissions-Policy" content="payment=(self), geolocation=(self), microphone=(self), camera=(self), private-state-token-redemption=(), private-state-token-issuance=()">
   
 
   
