--- a/server/email-templates/password-reset.html
+++ b/server/email-templates/password-reset.html
@@ -40,7 +40,7 @@
             <tr>
               <td align="center" style="padding:12px 24px 0 24px; background:#ffffff;">
                 <p style="margin:0; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', Arial, sans-serif; font-size:15px; line-height:24px; color:#4b5563;">
-                  Hi{{ if .Email }}, <strong>{{ .Email }}</strong>{{ end }} — we received a request to reset your password for your Discourse AI account.
+                  Hi <strong>{{ .Name }}</strong> — we received a request to reset your password for your Discourse AI account.
                   Click the button below to create a new password.
                 </p>
               </td>
