--- a/server/email-templates/signup-confirmation.html
+++ b/server/email-templates/signup-confirmation.html
@@ -40,7 +40,7 @@
             <tr>
               <td align="center" style="padding:12px 24px 0 24px; background:#ffffff;">
                 <p style="margin:0; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', Arial, sans-serif; font-size:15px; line-height:24px; color:#4b5563;">
-                  Hi{{ if .Email }}, <strong>{{ .Email }}</strong>{{ end }} — thanks for signing up for Discourse AI.
+                  Hi <strong>{{ .Name }}</strong> — thanks for signing up for Discourse AI.
                   Please confirm your email address to activate your account.
                 </p>
               </td>
